chore(contracts):1105 Refactored.